# Zhong_Hong_VRF

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_EN.md  pyproject.toml  quality_scale.yaml
custom_components/zhong_hong_vrf/: __init__.py  client.py  climate.py  config_flow.py  coordinator.py  runtime_data.py
docs/: adr-20250819-runtime-data-migration.md
tests/: test_config_flow.py
